--- a/src/App.css
+++ b/src/App.css
@@ -49,3 +49,10 @@
   align-items: center;
   flex-direction: column;
 }
+
+.container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  height: 300px;
+}
